04-security_group/security.tf
resource "aws_security_group" "mysecurity" {
    name = "terraform-sg-created"
    description = "This SG is created by terraform"

    ingress {
        protocol = "tcp"
        from_port = 22
        to_port = 22
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        protocol = "tcp"
        from_port = 80
        to_port = 80
        cidr_blocks = ["0.0.0.0/0"]

    }

    ingress {
        protocol = "tcp"
        from_port = 8080
        to_port = 8081
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        protocol = "-1"
        from_port = 0
        to_port = 0
        cidr_blocks = ["0.0.0.0/0"]
    }
}
